bug fixed with remote redeem feature

--- a/html/www/html/modals/redeem.html
+++ b/html/www/html/modals/redeem.html
@@ -63,6 +63,7 @@
                     </div>
                     <input type="hidden" id="request_type" name="request_type" value="redeem" />
                     <input type="hidden" id="receiver_id" name="receiver_id" value="" />
+                    <input type="hidden" id="recipientPublicKey" name="recipientPublicKey" value="" />
                     <input type="hidden" id="amountNQT" name="amountNQT" value="" />
                     <input type="hidden" id="feeNQT" name="feeNQT" value="0" />
                     <input type="hidden" id="deadline" name="deadline" value="60" />
