UI: removed ShapeShift js, changed favicon, some minor text changes

--- a/html/www/html/modals/nrs.html
+++ b/html/www/html/modals/nrs.html
@@ -421,7 +421,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" data-i18n="nxt_token_generation_validation">Nxt Token Generation / Validation</h4>
+                <h4 class="modal-title" data-i18n="nxt_token_generation_validation">XEL Token Generation / Validation</h4>
             </div>
             <div class="modal-body">
                 <ul class="nav nav-pills nav-justified" style="margin-bottom:10px">
@@ -591,7 +591,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" data-i18n="about_nxt">About Nxt</h4>
+                <h4 class="modal-title" data-i18n="about_nxt">About XEL</h4>
             </div>
             <div class="modal-body">
                 <div>
