--- a/html/www/index.html
+++ b/html/www/index.html
@@ -18,7 +18,7 @@
 <html class="lockscreen">
     <head>
         <meta charset="UTF-8">
-        <title data-i18n="app_title">NXT Wallet</title>
+        <title data-i18n="app_title">XEL Wallet</title>
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=yes">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -182,7 +182,6 @@
         <script src="js/nrs.modals.redeem.js" type="text/javascript"></script>
         <!-- ELASTIC SPECIFIC MODALS END -->
         <script src="js/nrs.util.js" type="text/javascript"></script>
-        <script src="js/nrs.shape.shift.js" type="text/javascript"></script>
         <script src="js/nrs.taggeddata.js" type="text/javascript"></script>
         <script src="js/nrs.header.js" type="text/javascript"></script>
         <script src="js/nrs.localstorage.js" type="text/javascript"></script>
