--- a/html/www/html/lockscreen.html
+++ b/html/www/html/lockscreen.html
@@ -30,10 +30,10 @@
 				<table style="width:100%;height:100%;">
 				<tr><td style="text-align:center;vertical-align:middle">
                 <div class="lockscreen-widget btn-group" data-toggle="buttons" id="loginButtons">
-                    <label class="lockscreen-widget btn btn-primary btn-lg active" data-login-type="account" data-reader="account_data_reader">
+                    <label class="lockscreen-widget btn btn-primary btn-lg" data-login-type="account" data-reader="account_data_reader">
                         <input type="radio" name="loginButtons"><i class="fa fa-male"></i>
                     </label>
-                    <label class="lockscreen-widget btn btn-primary btn-lg" data-login-type="password" data-reader="account_data_reader">
+                    <label class="lockscreen-widget btn btn-primary btn-lg active" data-login-type="password" data-reader="account_data_reader">
                         <input type="radio" name="loginButtons"><i class="fa fa-key"></i>
                     </label>
                     <label class="lockscreen-widget btn btn-primary btn-lg scan-qr-code" data-login-type="scan" data-reader="account_data_reader">
@@ -58,13 +58,13 @@
                             </div>
                         </div>
                         <input type="hidden" name="check_password_length" id="login_check_password_length" value="1" />
-                        <div class="input-group" id="login_account_container_other">
+                        <div class="input-group" id="login_account_container_other" style="display: none;">
                             <input type="text" class="form-control" id="login_account_other" name="login_account_other" placeholder="Your XEL Account" data-i18n="[placeholder]your_account" autofocus />
                             <div class="input-group-btn" style="border:1px solid #fff;">
                                 <button class="btn btn-flat" onclick="NRS.login(0,$('#login_account_other').val())"><i class="fa fa-arrow-right text-muted"></i></button>
                             </div>
                         </div>
-                        <div class="input-group" style="display:none">
+                        <div class="input-group" style="display:table">
                             <input type="password" class="form-control" id="login_password" name="login_password" placeholder="Your Passphrase" data-i18n="[placeholder]your_passphrase" autofocus />
                             <div class="input-group-btn" style="border:1px solid #fff;">
                                 <button class="btn btn-flat" onclick="NRS.login(1,$('#login_password').val())"><i class="fa fa-arrow-right text-muted"></i></button>
