new sign message

--- a/html/www/html/modals/redeem.html
+++ b/html/www/html/modals/redeem.html
@@ -38,7 +38,7 @@
                     <div class="form-group" style="width: 550px;" id="hiddeable_group" name="hiddeable_group">
                         Please sign the following text <i>(all in one line with no trailing or leading whitespaces)</i>:
                         <div id="redeemfieldsign" class="form-group" style="word-wrap: break-word">
-                            I confirm to redeem <span id="redeem_amount_field"></span> NQT-XEL from genesis entry <span id="redeem_address_field"></span> to account <span id="redeem_account_field"></span>
+                            Hereby, I confirm to redeem <span id="redeem_amount_field"></span> NQT-XEL from genesis entry <span id="redeem_address_field"></span> to account <span id="redeem_account_field"></span>
                         </div>
                     </div>
 
