--- a/html/www/html/pages/news.html
+++ b/html/www/html/pages/news.html
@@ -30,7 +30,7 @@
                 <div class="box box-primary">
                     <div class="box-header"><h3 class="box-title reddit">Bitcointalk.org</h3></div>
                     <div class="box-body">
-                        <div id="reddit_news" style="text-align: center; padding-top: 100px; padding-bottom: 100px;">Sorry, but we are still waiting for a new ANN thread.</div>
+                        <div id="bctforum_news" class="rss_news data-loading"><img src="img/loading_indicator.gif" alt="Loading..." width="32" height="32" /></div>
                     </div>
                 </div>
             </div>
