--- a/html/www/html/lockscreen.html
+++ b/html/www/html/lockscreen.html
@@ -24,9 +24,12 @@
                 <div class="callout callout-danger" id="testnet_login" data-i18n="testnet_login_warning">Log in with your TestNet account - not your real one!</div><div id="login_error" style="max-width:400px;min-width:400px;display:none">
                     <div class="callout callout-danger"></div>
                 </div>
+                <div class="callout callout-info" id="phrase_warning_initial" data-i18n="passphrase_warning_unique">The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature. Please understand, that your account functions like a brain wallet: if two people use the same passphrase, they have access to the same XEL.</div>
 
                 <div id="account_data_reader" style="display:none;margin:auto;width:384px;height:384px;"></div>
 				<table style="width:100%;height:100%;">
+                
+
 				<tr><td style="text-align:center;vertical-align:middle">
                 <div class="lockscreen-widget btn-group" data-toggle="buttons" id="loginButtons">
                     <label class="lockscreen-widget btn btn-primary btn-lg" data-login-type="account" data-reader="account_data_reader">
@@ -43,7 +46,9 @@
 				</table>
 				<table style="width:100%;height:100%;">
 				<tr><td style="text-align:center;vertical-align:middle">
+
                 <div class="lockscreen-item">
+
                     <div class="lockscreen-credentials">
                     	<div class="input-group" id="login_account_container" style="display:table;height:34px;width: 100%;">
                             <div class="dropdown" style="width: 100%;">
@@ -139,7 +144,7 @@
                         <div class="callout callout-danger" style="word-break:inherit;">
                             <span data-i18n="attention">Attention</span>:<br><br>
                             <span data-i18n="passphrase_warning_unique">
-                                The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.
+                                The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature. Please understand, that your account functions like a brain wallet: if two people use the same passphrase, they have access to the same XEL.
                             </span><br><br>
                             <span data-i18n="passphrase_warning_disclose">
                                 Don't ever disclose your passphrase. If you lose it you lose access to your account!
