--- a/html/www/html/lockscreen.html
+++ b/html/www/html/lockscreen.html
@@ -246,7 +246,7 @@
         </td>
         </tr>
     </table>
-    <canvas class"dec-animation" style="position:absolute; top: 0; left: 0; z-index: -1;"></canvas>
+    <canvas class="particles-animation"></canvas>
     <!-- this dummy checkbox corrects rendering problem of checkboxes when using desktop application on Linux -->
     <div id="dummyCheckbox">
         <input type="checkbox" disabled>
