--- a/html/debugger/interface.html
+++ b/html/debugger/interface.html
@@ -144,7 +144,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <a class="navbar-brand" href="#">XEL Testbench</a>
