--- a/html/debugger/interface.html
+++ b/html/debugger/interface.html
@@ -15,7 +15,7 @@
     <link href="tether.min.css" rel="stylesheet">
 
     <link href="dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/vs.css">
+    <link rel="stylesheet" href="styles/solarized-light.css">
     <script src="highlight.pack.js"></script>
     <script>
         hljs.initHighlightingOnLoad();
